# rigortemplate-rust-leptos-tailwind-01

./: .gitignore  Cargo.toml  README.md  TODOS.md  Trunk.toml  index.html  package.json  run.sh  tailwind.config.js
docs/: Architecture.md  Components.md  Development.md  Hooks.md  Routing.md  StateManagement.md
public/: tailwind.css
scripts/: find-port.sh
src/: app.rs  components.rs  demos.rs  error.rs  lib.rs  main.rs  pages.rs  store.rs
src/components/: layout.rs  mod.rs  sidebar.rs  topnav.rs
src/core/: mod.rs  nav.rs  store.rs  utils.rs
src/core/services/: registry.rs  task_service.rs
src/demos/: modal.rs  stats.rs  tabs.rs
src/pages/: demo.rs  demo_detail.rs  home.rs  hooks.rs
src/pages/demos/: accordion.rs  sliding_panel.rs
src/services/: mod.rs  task_service.rs
src/shared/hooks/: browser.rs  dom.rs  idle.rs  keyboard.rs  media.rs  mod.rs  mouse.rs  observer.rs  state.rs  timer.rs  url.rs  window.rs
src/shared/utils/: date.rs  mod.rs  syntax_highlight.rs
src/stdlib/: mod.rs
src/stdlib/components/: code_block.rs  error_display.rs  mod.rs  modal.rs  notification_toast.rs  showcase.rs
src/stdlib/hooks/: browser.rs  dom.rs  keyboard.rs  media.rs  mod.rs  mouse.rs  observer.rs  state.rs  storage.rs  timer.rs  url.rs  window.rs
src/stdlib/utils/: date.rs  syntax_highlight.rs
src/ui/components/: badge.rs  button.rs  card.rs  code_block.rs  error_display.rs  input.rs  mod.rs  modal.rs  notification_toast.rs  showcase.rs  stats_card.rs  (+1 more)
style/: output.css  tailwind.css
tests/: demo_validation_tests.rs  hooks_tests.rs  store_tests.rs  task_service_tests.rs
(+14 files in other folders)
