[package]
name = "leptos-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
# Remove leptos-use due to version incompatibility with leptos 0.6
# leptos-use = "0.6"
wasm-bindgen = "0.2"
thiserror = "1"
http = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
web-sys = { version = "0.3", features = ["Window", "Event", "MouseEvent", "KeyboardEvent", "MediaQueryList", "MediaQueryListEvent", "Node", "Element", "Navigator", "Location", "UrlSearchParams", "ResizeObserver", "ResizeObserverEntry", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "DomRect", "DomTokenList"] }
js-sys = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
fuzzy-matcher = "0.3.7"

[features]
csr = ["leptos/csr"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
leptos_router = { version = "0.8" }
